--- a/HCL.html
+++ b/HCL.html
@@ -41,6 +41,7 @@
 <p>3.12.14</p>
 <p>Yes</p>
 <p>Yes</p>
+<p>The optional nVidia Optimus VGA is still not working.</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/sfV4-pMWrBY/discussion">​Zrubi</a></p>
 <p>Lenovo T510 (4384-WGZ)<br /> (i5-M520; Arrandale; Intel HD graphics; BIOS 1.52)</p>
 <p>Yes</p>
