--- a/HCL.html
+++ b/HCL.html
@@ -303,14 +303,14 @@
 <p>R1</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
-<p>Lenovo Thinkpad X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
+<p>Lenovo Thinkpad X1 Carbon (3444CTO)<br /> (i5-3427U)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <p>Lenovo X1 Carbon Gen 2<br /> (i5-4300U, Haswell-ULT, HD4000)</p>
 <p>No</p>
-<p>Nos</p>
+<p>No</p>
 <p>1.07</p>
 <p>R2B3</p>
 <p>3.11.1-2</p>
@@ -422,7 +422,7 @@
 <p>R1</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​read more</a></p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​Jan Beerden</a></p>
-<p>Zareason Ultra Lap 420<br /> (Ivy Bridge, HD Graphics, i5-3317U)</p>
+<p>Zareason Ultra Lap 420<br /> (i5-3317U, Ivy Bridge, HD Graphics)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>R2B2</p>
@@ -452,6 +452,10 @@
 <p>R2B3</p>
 <p>3.9.2-2</p>
 <p>Problem with graphics on 3.11,3.7, only 2GB RAM.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/RYzkSFoMsxQ/ukXhBW4ybqQJ">​Nukama</a></p>
+<p>R2RC1</p>
+<p>3.9</p>
+<p>Problem with graphics on 3,12,3.11,3.7, only 2GB RAM stock.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/RYzkSFoMsxQ/ukXhBW4ybqQJ">​Nukama</a></p>
 <p>HP ProLiant DL360 G5<br /> (E5440, 5000P, ATI ES1000)</p>
 <p>Yes</p>
@@ -496,6 +500,10 @@
 <p>R2B3</p>
 <p>3.9.2-2</p>
 <p><a href="/trac/ticket/762">#762</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/DTot3wX1-nQ/229c20xWrdQJ">​Nukama</a></p>
+<p>R2RC1</p>
+<p>3.12.14-4</p>
+<p>USB-Devices are working in 3.12 installer and luks prompt again.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/DTot3wX1-nQ/229c20xWrdQJ">​Nukama</a></p>
 <p>EVGA_E685<br /> (LGA1150, Z68)</p>
 <p>Yes</p>
