--- a/HCL.html
+++ b/HCL.html
@@ -513,6 +513,16 @@
 <p>3.11.1-2</p>
 <p>Problems with Audio</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/wSCL-4VL2Ew/cU8-2qyT008J">​jeff</a></p>
+<p>Gigabyte GA-870A-UD3<br /> (Phenom II X4 955, 870/SB850, GTX 460)</p>
+<p>Yes</p>
+<p>No</p>
+<p>F5a</p>
+<p>R2B2</p>
+<p>3.11.1-2</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/S4Ju0zDM2mI/Q4GZ4S2txdMJ">Fabian Lichte</a></p>
+<p>R2RC1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/S4Ju0zDM2mI/Q4GZ4S2txdMJ">Fabian Lichte</a></p>
 <p>Gigabyte GA-FXA990-UD3 (rev 3.0)<br /> (AMD FX-8350, GTX 470)</p>
 <p>Yes</p>
 <p>No</p>
