--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -18,4 +18,5 @@
 <li><a href="/wiki/wiki/CodingStyle">Coding Guidelines</a></li>
 <li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
 <li><a href="/wiki/wiki/QubesResearch">Research Papers</a></li>
+<li><a href="/wiki/wiki/Profiling">Profiling python code</a></li>
 </ul>
