--- a/HCL.html
+++ b/HCL.html
@@ -49,16 +49,26 @@
 <p>R2B2</p>
 <p>No Network, Chipset doesn't support VT-d! <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a> <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
-<p>ASUS UX-31<br /> ()</p>
-<p>R2B1</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
 <p>ASUS X55A<br /> ()</p>
 <p>No</p>
 <p>No</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
+<p>ASUS Zenbook UX-31<br /> (i5-2557M, HD 3000)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2B2</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
+<p>ASUS Zenbook UX31A<br /> (i5-3317U, Ivy Bridge, HD4000)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>UX31A.212</p>
+<p>R2RC1</p>
+<p>3.12.14-4</p>
+<p>USB Ethernet dongle not working.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/WFukA9TlQog/fua6-o89AEoJ">Darren Thurston</a></p>
 <p>ASUS Zenbook UX31A<br /> (i7-3517U, Ivy Bridge, HD4000)</p>
 <p>Yes</p>
 <p>Yes</p>
