--- a/HCL.html
+++ b/HCL.html
@@ -274,6 +274,10 @@
 <p>R2B3</p>
 <p>3.11</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ll_pPP7glwI/jtRbKtQO_rMJ">​cprise</a></p>
+<p>2.58</p>
+<p>R2RC1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/452tkVCzvOw/_dQ8DXaDzp0J">​cprise</a></p>
 <p>Lenovo Thinkpad T430u<br /> (i7-3517M, Ivy Bridge, HD Graphics + GT 620M)</p>
 <p>Yes</p>
 <p>Yes</p>
