--- a/HCL.html
+++ b/HCL.html
@@ -341,6 +341,13 @@
 <p>Lenovo Thinkpad X61t<br /> ()</p>
 <p>R2B1</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/4IrF1A6sa3U/QIQe-dNc4tEJ">​George Walker</a></p>
+<p>Lenovo Thinkpad X201<br /> (i5-520M, HD3000)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2RC1</p>
+<p>3.9.2-2</p>
+<p>X problem with activated VT-d on all other kernel versions</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/z5BEjSuR7VE/CD2JMeAhDaoJ">​Joonas Lehtonen</a></p>
 <p>Lenovo Thinkpad X220 (4290-W3W)<br /> (i5-2520M, QM67, HD3000)</p>
 <p>Yes</p>
 <p>Yes</p>
