--- a/QubesArchitecture.html
+++ b/QubesArchitecture.html
@@ -1,7 +1,7 @@
 <h1 id="QubesArchitectureOverview">Qubes Architecture Overview</h1>
 <p>Qubes implements a Security by Isolation approach. To do this, Qubes utilizes virtualization technology in order to isolate various programs from each other and even to sandbox many system-level components, such as networking and storage subsystems, so that the compromise of any of these programs or components does not affect the integrity of the rest of the system.</p>
 <p>Qubes lets the user define many security domains, which are implemented as lightweight Virtual Machines (VMs), or “AppVMs.” For example, the user can have “personal,” “work,” “shopping,” “bank,” and “random” AppVMs and can use the applications within those VMs just as if they were executing on the local machine. At the same time, however, these applications are well isolated from each other. Qubes also supports secure copy-and-paste and file sharing between the AppVMs, of course.</p>
-<p><a href="http://files.qubes-os.org/Architecture_files/droppedImage.png"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
+<p><a href="/wiki/attachment/wiki/QubesArchitecture/qubes-arch-diagram-1.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qubes-arch-diagram-1.png&quot; attached to QubesArchitecture" alt="No image &quot;qubes-arch-diagram-1.png&quot; attached to QubesArchitecture" /></a></p>
 <p>(Note: In the diagram above, &quot;Storage domain&quot; is actually a USB domain.)</p>
 <h2 id="KeyArchitecturefeatures">Key Architecture features</h2>
 <ul>
