--- a/WikiStart.html
+++ b/WikiStart.html
@@ -1,4 +1,4 @@
-<p><a href="/wiki/wiki/QubesArchitecture"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
+<p><a href="/wiki/wiki/QubesArchitecture"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qubes-arch-diagram-1.png&quot; attached to QubesArchitecture" alt="No image &quot;qubes-arch-diagram-1.png&quot; attached to QubesArchitecture" /></a></p>
 <h1 id="WelcometotheQubesOSProject">Welcome to the Qubes OS Project</h1>
 <p>Qubes is an open-source operating system designed to provide strong security for desktop computing. Qubes is based on Xen, the X Window System, and Linux, and can run most Linux applications and utilize most of the Linux drivers. Qubes <strong>Release 1</strong> was released in September 2012. Qubes <strong>Release 2</strong> is almost complete, with rc1 having been released in April 2014. Qubes supports Windows-based AppVMs beginning with Release 2.</p>
 <ul>
