--- a/BugReportingGuide.html
+++ b/BugReportingGuide.html
@@ -1,11 +1,11 @@
 <h1 id="BugReportingGuide">Bug Reporting Guide</h1>
 <p>One of the most important contribution task is reporting the bugs you have found.</p>
-<p>All bugs and suggestions should be reported to one of our <a href="/wiki/wiki/QubesLists">mailing list</a>. We decided that at this stage access to the wiki and the <a href="https://qubes-os.org/trac/report/3">​ticketing system</a> should be limited and per-invitation only, and generally granted to those people who actually can first demonstrate that they are capable of contributing something useful to the project. Our main goal is to build a quality product, and this has a priority over building &quot;a large community&quot;.</p>
+<p>All bugs and suggestions should be reported to one of our <a href="/wiki/wiki/QubesLists">mailing list</a>. We decided that at this stage access to the wiki and the <a href="/wiki/report/3">ticketing system</a> should be limited and per-invitation only, and generally granted to those people who actually can first demonstrate that they are capable of contributing something useful to the project. Our main goal is to build a quality product, and this has a priority over building &quot;a large community&quot;.</p>
 <p>So if you have not allowed to file new tickets You should follow these guide lines:</p>
 <ol>
 <li>Search the issue tracker to see if your issue is already there - if so please cite the issue # in any comments you post.
 <ul>
-<li><a href="https://qubes-os.org/trac/search">​Simple search</a></li>
+<li><a href="/wiki/search">Simple search</a></li>
 <li><a href="https://qubes-os.org/trac/query">​Advanced search</a></li>
 </ul></li>
 </ol>
@@ -24,5 +24,5 @@
 <li>Qubes <a href="/wiki/wiki/QubesDevelopers">developers</a> may ask you additional questions - please do follow up.</li>
 </ol>
 <ol start="6">
-<li>If the issue can be validated as a definite bug then they enters it into the <a href="https://qubes-os.org/trac/report/3">​issue tracker</a>.</li>
+<li>If the issue can be validated as a definite bug then they enters it into the <a href="/wiki/report/3">issue tracker</a>.</li>
 </ol>
