--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -18,6 +18,7 @@
 <li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
 <li>Zrubecz Laszlo <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
 <li>Vincent Penquerc'h <code>vincent.penquerch@collabora.co.uk</code> -- code review, misc fixes</li>
+<li>Wojciech Porczyk <code>wojciech@porczyk.eu</code> -- minor gui and core fixes</li>
 </ul>
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
