--- a/HCL.html
+++ b/HCL.html
@@ -220,7 +220,15 @@
 <p>R2B3</p>
 <p>3.11.1-2</p>
 <p><a href="">​Qubes core developers</a></p>
-<p>Lenovo Thinkpad T410<br /> (i7-620M, Arrandale, HD graphics)</p>
+<p>Lenovo Thinkpad T410 (2522AC1)<br /> (i5-520M, Arrandale, HD graphics)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>1.32</p>
+<p>R2RC1</p>
+<p>3.12.14-4</p>
+<p>AEM works</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/68PRfx5FteY/H6rvQ6ojEysJ">​Vincent Penquerc'h</a></p>
+<p>Lenovo Thinkpad T410 (2516CTO)<br /> (i7-620M, Arrandale, HD graphics)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>1.34</p>
