--- a/HCL.html
+++ b/HCL.html
@@ -33,7 +33,7 @@
 <p>Remarks</p>
 <p>Further information field. Qubes, dom0 and this field is coloured in conjunction to reflect compatibility.</p>
 <p>Reported by</p>
-<p>Name linked to report in qubes-users (https://groups.google.com/d/msg/qubes-devel/${ID}).</p>
+<p>Name linked to report in <a href="https://groups.google.com/forum/#!forum/qubes-users">qubes-users.</a></p>
 <p><br /></p>
 <p><strong>Note:</strong> <br /> The HCL is a compilation of reports generated and submitted by users. Except in the case of developer-reported entries, the Qubes team has not independently verified the accuracy of these reports. <br /> If using the list to make a purchasing decision, we recommend that you first test the hardware yourself, if possible. <br /> Try to shop for hardware with best achievable Qubes security level (green columns in HVM, IOMMU, TPM) and general machine compatibility (green columns in Qubes version, dom0 kernel, remarks).</p>
 <h2 id="Reports">Reports</h2>
