--- a/HCL.html
+++ b/HCL.html
@@ -31,7 +31,7 @@
 <p><a href="https://en.wikipedia.org/wiki/Dom0">dom0</a> <a href="https://en.wikipedia.org/wiki/Linux_kernel#Maintenance">kernel</a></p>
 <p>Reported kernel version (numbers in uname -r), can be selected during installation and boot in Troubleshooting menu.</p>
 <p>Remarks</p>
-<p>Further information field. Qubes, dom0 and this field is coloured in conjunction to reflect compatibility.</p>
+<p>Further information field. Qubes, dom0 and this field is coloured in conjunction to reflect general machine compatibility.</p>
 <p>Reported by</p>
 <p>Name linked to report in <a href="https://groups.google.com/forum/#!forum/qubes-users">qubes-users.</a></p>
 <p><br /></p>
