--- a/HCL.html
+++ b/HCL.html
@@ -516,6 +516,14 @@
 <p>3.11.1-2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
 <p><strong>Motherboards</strong></p>
+<p>ASRock G31M-GS<br /> (LGA775, G31, GMA3100)</p>
+<p>Yes</p>
+<p>No</p>
+<p>P1.90</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p>using Q6600 and GeForce 8600 GT</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/jxVnfMnU4s4/5t_lbe3oA7IJ">​fb900c26</a></p>
 <p>ASRock Q87M Vpro<br /> (LGA1150, Q87)</p>
 <p>Yes</p>
 <p>Yes</p>
