--- a/HCL.html
+++ b/HCL.html
@@ -96,6 +96,14 @@
 <p>3.9.2-2</p>
 <p>Most features work on 3.7 and 3.11, but for best results use 3.9.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ol6v6xSla4Y/vFgIHeObF-8J">​AndrewX192</a></p>
+<p>Clevo P151HM1<br /> (i7-2720QM, Sandy Bridge, GeForce GTX 460M)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p>4.6.4</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/a5dspO8wRCU/RC12tcxtaCcJ">​David Kennedy</a></p>
 <p>Dell Latitude E4300<br /> (P9600, GMA 4500MHD, Mobile 4 Series Chipset)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -488,6 +496,15 @@
 <p>A09</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/D16dM3rg8Iw/zOEZmjTJkRIJ">Andrew Sorensen</a></p>
+<p>HP Compaq dc7800 SFF<br /> (E8400, Q35)</p>
+<p>Yes</p>
+<p>*</p>
+<p>*</p>
+<p>1.32</p>
+<p>R2B3</p>
+<p>3.9.2-2</p>
+<p>IGP won't work with activated VT-d (3.12,3.11,3.7), <a href="https://groups.google.com/d/msg/qubes-users/QmshQ6aHsCM/LTyn6mL0kFkJ">​3,9 works</a>, TPM not tested.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/QmshQ6aHsCM/nJv69i3jbWYJ">​Rob Townley</a></p>
 <p>HP Compaq dc7900 Convertible Minitower<br /> (E8400, Q45/Q43)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -539,6 +556,14 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
+<p>Asus M4A89GTD USB3/PRO<br /> ()</p>
+<p>Yes</p>
+<p>No</p>
+<p>No</p>
+<p>3029</p>
+<p>R2rc1</p>
+<p>with Phenom II X4 965 and Radeon HD 5750</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/6UPz3B0hg_U/bNcRAMiYJekJ">David Kennedy</a></p>
 <p>Biostar A880GZ<br /> (AM3+, 880G/SB850)</p>
 <p>R2B3</p>
 <p>3.9.2-2</p>
